# z3city

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
tests/: test_solver.py
z3city/: solver.py
