[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "z3city"
authors = [
    { name = "Jonatan Wiik" },
]
version = "0.0.0"
dependencies = [
    "z3-solver>=4.13.0.0,<5",
]
requires-python = ">= 3.12"

[tool.pip-tools]
emit-index-url = false
generate-hashes = false
allow-unsafe = true
strip-extras = true

[tool.isort]
profile = "black"
extend_skip_glob = "venv*"

[tool.pytest.ini_options]
testpaths = ["tests"]
