[tool.poetry]
name = "z3city"
version = "0.1.0"
description = "Electricity price optimization with Z3 SMT solver"
authors = ["jwiik"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
z3-solver = ">=4.13.0.0,<5"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
isort = "*"
black = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
extend_skip_glob = "venv*"

[tool.pytest.ini_options]
testpaths = ["tests"]
